# fire-spread

./: .gitignore  README.md  cpu_environment.yml  pyproject.toml
gofer/: fire_arrival_time_viz.py  fire_perimeter_viz.py  ingest.py  orthorectify.py  process_nc_files.py  tilers.py
scripts/gofer/: demo_aggregate.py  demo_compositing.py  demo_coregistration.py  demo_early_perimeter_adjustment.py  demo_ingest.py  demo_ortho.py  demo_pipeline.py  demo_remapper.py  demo_spatial_smoothing.py  demo_temporal_downsampler.py  demo_vectorize.py  test_remapping.py
scripts/viz/: demo_ortho.py
src/gofer/: README.md  composite.py  early_perimeter_adjustment.py  geometry.py  goes_utils.py  ingest.py  ortho.py  orthorectify.py  postprocess.py  remapper.py  spatial_smoothing.py  temporal_downsampler.py  vectorize.py
tests/gofer/: test_composite.py  test_temporal_downsampler.py
tests/gofer/data/: filelist.pkl  goes_files.csv  metadata.pkl
viz/gofer/: fire_perimeter.py  goes_plotting_utils.py  ortho.py
