[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-spread"
version = "0.1.0"
description = "Tools for GOES fire spread processing and visualization"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["gofer*", "viz*"]
